# sound-control-panel

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_monitor.rs  lib.rs  main.rs
src-tauri/src/commands/: audio.rs  mod.rs
