[package]
name = "sound-control-panel"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sound_control_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-core = "0.61.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28.0" 
futures-util = "0.3"
windows = { version = "0.61.2", features = [
    "Win32_System_Com", 
    "Win32_Media_Audio", 
    "Win32_Foundation", 
    "Win32_System_Threading", 
    "Win32_System_ProcessStatus", 
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Diagnostics_ToolHelp",
    
    
    ] }

